; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/preproc/extr_variable.c_new_variable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/preproc/extr_variable.c_new_variable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.variable = type { i32, %struct.variable*, %struct.ECPGtype*, i32 }
%struct.ECPGtype = type { i32 }

@allvariables = common dso_local global %struct.variable* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.variable* @new_variable(i8* %0, %struct.ECPGtype* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ECPGtype*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.variable*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.ECPGtype* %1, %struct.ECPGtype** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call i64 @mm_alloc(i32 32)
  %9 = inttoptr i64 %8 to %struct.variable*
  store %struct.variable* %9, %struct.variable** %7, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @mm_strdup(i8* %10)
  %12 = load %struct.variable*, %struct.variable** %7, align 8
  %13 = getelementptr inbounds %struct.variable, %struct.variable* %12, i32 0, i32 3
  store i32 %11, i32* %13, align 8
  %14 = load %struct.ECPGtype*, %struct.ECPGtype** %5, align 8
  %15 = load %struct.variable*, %struct.variable** %7, align 8
  %16 = getelementptr inbounds %struct.variable, %struct.variable* %15, i32 0, i32 2
  store %struct.ECPGtype* %14, %struct.ECPGtype** %16, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.variable*, %struct.variable** %7, align 8
  %19 = getelementptr inbounds %struct.variable, %struct.variable* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 8
  %20 = load %struct.variable*, %struct.variable** @allvariables, align 8
  %21 = load %struct.variable*, %struct.variable** %7, align 8
  %22 = getelementptr inbounds %struct.variable, %struct.variable* %21, i32 0, i32 1
  store %struct.variable* %20, %struct.variable** %22, align 8
  %23 = load %struct.variable*, %struct.variable** %7, align 8
  store %struct.variable* %23, %struct.variable** @allvariables, align 8
  %24 = load %struct.variable*, %struct.variable** %7, align 8
  ret %struct.variable* %24
}

declare dso_local i64 @mm_alloc(i32) #1

declare dso_local i32 @mm_strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
